[gd_scene load_steps=2 format=3 uid="uid://dxi3evq4dx6tr"]

[ext_resource type="Script" path="res://Levels/base/debug_commands.gd" id="1_r37r8"]

[node name="CanvasLayer" type="CanvasLayer"]
layer = 15

[node name="DebugCommands" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r37r8")

[node name="ColorRect" type="ColorRect" parent="DebugCommands"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.556863)

[node name="VBoxContainer" type="VBoxContainer" parent="DebugCommands"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="DebugCommands/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CommandOutput" type="Label" parent="DebugCommands/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
vertical_alignment = 2

[node name="CommandPrompt" type="LineEdit" parent="DebugCommands/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
draw_control_chars = true
caret_blink = true
caret_force_displayed = true

[connection signal="text_submitted" from="DebugCommands/VBoxContainer/CommandPrompt" to="DebugCommands" method="_on_command_prompt_text_submitted"]
